# NaiveWM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  TODO.md
cmake_modules/: FindCairomm.cmake  FindDBus.cmake  FindEGL.cmake  FindGLM.cmake  FindUdev.cmake  FindXKBCommon.cmake
src/: config.h  main.cc  main_looper.cc  main_looper.h  xdg-shell-unstable-v6.h
src/backend/: backend.h  egl_context.cc  egl_context.h
src/backend/drm_backend/: drm_backend.cc  drm_backend.h
src/backend/x11_backend/: x11_backend.cc  x11_backend.h
src/base/: geometry.h  image_codec.cc  image_codec.h  logging.h  looper.h  macros.h  time.cc  time.h  utils.cc  utils.h
src/compositor/: buffer.cc  buffer.h  compositor.cc  compositor.h  compositor_view.cc  compositor_view.h  draw_quad.cc  draw_quad.h  gl_renderer.cc  gl_renderer.h  region.cc  region.cpp  region.h  shell_surface.cc  shell_surface.h  subsurface.cc  subsurface.cpp  subsurface.h  surface.cc  surface.h  texture_delegate.h
src/event/: event_hub.cc  event_hub.h  event_hub_libinput.cc  event_hub_libinput.h
src/protocols/: input-method-unstable-v1.c  input-method-unstable-v1.h  text-input-unstable-v1.h  xdg-shell-unstable-v5.h  xwayland-keyboard-grab-unstable-v1.c  xwayland-keyboard-grab-unstable-v1.h
src/resources/: cursor.h
src/ui/: image_view.cc  image_view.h  text_view.cc  text_view.h  widget.cc  widget.h
src/wayland/: data_device.cc  data_device.h  data_offer.cc  data_offer.h  data_source.cc  data_source.h  display.cc  display.cpp  display.h  display_metrics.cc  display_metrics.h  keyboard.cc  keyboard.h  output.cc  output.h  pointer.cc  pointer.h  seat.cc  seat.h  server.cc  server.h  shared_memory.cc  shared_memory.cpp  shared_memory.h  text_input.cc  text_input.h
src/wm/: event.cc  event.h  keyboard_event.cc  keyboard_event.h  manage_hook.cc  manage_hook.h  mouse_event.cc  mouse_event.h  scoped_move_window.cc  scoped_move_window.h  scoped_resize_window.cc  scoped_resize_window.h  window.cc  window.h  window_impl.cc  window_impl.h  window_manager.cc  window_manager.h
src/wm/manage/: manage_hook.cc  manage_hook.h  panel.cc  panel.h  power_indicator.cc  power_indicator.h  split_exec.cc  split_exec.h  workspace.cc  workspace.h
src/wm/window_impl/: window_impl_cairo.cc  window_impl_cairo.h  window_impl_wayland.cc  window_impl_wayland.h
src/xwayland/: xwm.cc  xwm.h
