CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(NaiveWM)

SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_CXX_FLAGS "-std=c++14 -Werror")

INCLUDE(cmake_modules/FindWayland.cmake)
INCLUDE(cmake_modules/FindPixman.cmake)

INCLUDE_DIRECTORIES(${WAYLAND_SERVER_INCLUDE_DIR} ${PIXMAN_INCLUDE_DIRS} src)

FILE(GLOB_RECURSE NAIVE_SOURCE src/*.cc)
FILE(GLOB_RECURSE WAYLAND_EXTRA_PROTOCOLS src/*.c)

SET(WM_EXECUTABLE naive)
SET(ALL_SOURCE ${NAIVE_SOURCE} ${WAYLAND_EXTRA_PROTOCOLS})
MESSAGE(${ALL_SOURCE})
ADD_EXECUTABLE(${WM_EXECUTABLE} ${ALL_SOURCE})
TARGET_LINK_LIBRARIES(${WM_EXECUTABLE} ${WAYLAND_SERVER_LIBRARIES} ${PIXMAN_LIBRARIES})
